--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,71 @@ ipch/
 *.opendb
 packages/
 *.db
+Physics II - Bullet3D - Handout 05/.vs/3D Physics/v16/.suo
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/3D Physics - class5.lastbuildstate
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/CL.command.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/CL.read.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/CL.write.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/link.command.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/link.read.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/link.write.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.exe
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.exe.recipe
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.ilk
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.pdb
+Physics II - Bullet3D - Handout 05/Debug/3D Physics.log
+Physics II - Bullet3D - Handout 05/Debug/3D Physics.vcxproj.FileListAbsolute.txt
+Physics II - Bullet3D - Handout 05/Debug/Application.obj
+Physics II - Bullet3D - Handout 05/Debug/Color.obj
+Physics II - Bullet3D - Handout 05/Debug/glmath.obj
+Physics II - Bullet3D - Handout 05/Debug/Light.obj
+Physics II - Bullet3D - Handout 05/Debug/log.obj
+Physics II - Bullet3D - Handout 05/Debug/Main.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleAudio.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleCamera3D.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleInput.obj
+Physics II - Bullet3D - Handout 05/Debug/ModulePhysics3D.obj
+Physics II - Bullet3D - Handout 05/Debug/ModulePlayer.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleRenderer3D.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleSceneIntro.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleWindow.obj
+Physics II - Bullet3D - Handout 05/Debug/PhysBody3D.obj
+Physics II - Bullet3D - Handout 05/Debug/PhysVehicle3D.obj
+Physics II - Bullet3D - Handout 05/Debug/Primitive.obj
+Physics II - Bullet3D - Handout 05/Debug/Timer.obj
+Physics II - Bullet3D - Handout 05/Debug/vc142.idb
+Physics II - Bullet3D - Handout 05/Debug/vc142.pdb
+Physics II - Bullet3D - Handout 05/.vs/3D Physics/v16/.suo
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/3D Physics - class5.lastbuildstate
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/CL.command.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/CL.read.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/CL.write.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/link.command.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/link.read.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physi.746CC4C3.tlog/link.write.1.tlog
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.exe
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.exe.recipe
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.ilk
+Physics II - Bullet3D - Handout 05/Debug/3D Physics - class5.pdb
+Physics II - Bullet3D - Handout 05/Debug/3D Physics.log
+Physics II - Bullet3D - Handout 05/Debug/3D Physics.vcxproj.FileListAbsolute.txt
+Physics II - Bullet3D - Handout 05/Debug/Application.obj
+Physics II - Bullet3D - Handout 05/Debug/Color.obj
+Physics II - Bullet3D - Handout 05/Debug/glmath.obj
+Physics II - Bullet3D - Handout 05/Debug/Light.obj
+Physics II - Bullet3D - Handout 05/Debug/log.obj
+Physics II - Bullet3D - Handout 05/Debug/Main.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleAudio.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleCamera3D.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleInput.obj
+Physics II - Bullet3D - Handout 05/Debug/ModulePhysics3D.obj
+Physics II - Bullet3D - Handout 05/Debug/ModulePlayer.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleRenderer3D.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleSceneIntro.obj
+Physics II - Bullet3D - Handout 05/Debug/ModuleWindow.obj
+Physics II - Bullet3D - Handout 05/Debug/PhysBody3D.obj
+Physics II - Bullet3D - Handout 05/Debug/PhysVehicle3D.obj
+Physics II - Bullet3D - Handout 05/Debug/Primitive.obj
+Physics II - Bullet3D - Handout 05/Debug/Timer.obj
+Physics II - Bullet3D - Handout 05/Debug/vc142.idb
+Physics II - Bullet3D - Handout 05/Debug/vc142.pdb
